Fix project image spacing

--- a/src/components/ProjectInfo/ProjectImage/ProjectImage.module.scss
+++ b/src/components/ProjectInfo/ProjectImage/ProjectImage.module.scss
@@ -4,12 +4,13 @@ $imageWidth: 350px;
 $imageHeight: 300px;
 
 .projectImage {
-  margin: 35px 0 60px 0;
+  margin: 35px 0 60px 0 !important;
   font-size: .8em;
   padding: 10px;
   cursor: pointer;
   user-select: none;
   border-radius: 5px;
+  display: block;
 
   &.noImage {
     border: 1px dashed lighten($lightColor, 50%);
